--- a/PartTemplateBox.Tests/PartTemplateBox.Tests.csproj
+++ b/PartTemplateBox.Tests/PartTemplateBox.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -59,6 +60,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PartTemplateBox\PartTemplateBox.csproj">
+      <Project>{7DD583BB-DCE8-45EF-8C62-CC04D0B1D729}</Project>
+      <Name>PartTemplateBox</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
