--- a/PartTemplateBox/PartTemplateBox.csproj
+++ b/PartTemplateBox/PartTemplateBox.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -64,7 +66,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PartControlTemplate.cs" />
-    <Compile Include="PartReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
