--- a/PartTemplateBox/PartTemplateBox.csproj
+++ b/PartTemplateBox/PartTemplateBox.csproj
@@ -58,7 +58,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ControlTemplateSelector.cs" />
     <Compile Include="FooControl.cs" />
+    <Compile Include="FooControlTemplateSelector.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
